--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=security
+server.port=5432
+db.url=jdbc:postgresql://localhost:5432/security
+db.username=security_admin
+db.password=security
