Created App but have error.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=security
 server.port=5432
-db.url=jdbc:postgresql://localhost:5432/security
-db.username=security_admin
-db.password=security
+spring.datasource.url=jdbc:postgresql://localhost:5432/security
+spring.datasource.username=security_admin
+spring.datasource.password=security
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.profiles.active=dev
+jwt.secret=12332ooihkjm32kg123hvvk34h5g5g3h2vvh5g4f4
+jwt.lifetime=30m
